--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,35 +1,64 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body{
+  background-color:#7e7b79fb;
+  color:#000000;
+
+  font-family: Verdana, Geneva, sans-serif;
+  font-size:16px;
+  font-weight:normal;
+
+  line-height:1.6em;
 }
 
-* {
-  box-sizing: border-box;
+.container {
+  width:80%;
+  margin:auto;
+  background-color:#333333;
 }
 
-main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+/* ========== BOXES ========== */
+.box-1{
+  background-color:#333333;
+  color:rgb(87, 170, 163);
+
+  border: 5px rgb(0, 255, 234) solid;
+
+  padding:5px 40px;
+  margin:20px 0;
 }
 
+.box-2{
+  background-color:#333333;
+  color:rgb(170, 87, 87);
+
+  border: 5px rgb(255, 0, 0) solid;
+
+  padding:5px 40px;
+  margin:20px 0;
+}
+
+
+/* ========== LINKS ========== */
+a{
+  text-decoration: none;
+  color:#000000;
+}
+
+a:hover{
+  color:red;
+}
+
+a:active{
+  color:green;
+}
+
+a:visited{
+  color:#000000;
+}
+
+/* ========== CODE ========== */
 code {
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
   font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
-}
-
-.container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
