--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,13 @@
 /* ========== MAIN ========== */
 body{
-  background-image:url("../images/parrot.jpg");
+  background-image:url("../images/space.jpg");
   background-size:cover;
   background-repeat: no-repeat;
-  background-color: #171717;
+
+  background-color: #0a111f;
   color:whitesmoke;
-  font-family: Verdana, Geneva, sans-serif;
+
+  font-family: serif, Verdana, Geneva, sans-serif;
   font-size:16px;
   line-height:1.6em;
   margin:0;
@@ -15,41 +17,189 @@ body{
   clear:both;
 }
 
-.container{
-  width:80%;
-  margin:auto;
-  overflow:hidden;
-}
-
 #main-header{
+  /*position:fixed;  Fix the header in case of scrolling
+  top:0px;
+  height:75px;*/
+  width:100%;
+
+  border: 4px solid #ac8e4d;
+  background-color:#0a111f;
+  box-sizing: border-box;
+  color: #ac8e4d;
+
   text-align: center;
-  border: 4mm ridge white;
+  font-style: italic;
+  font-size: 16px;
 }
 
 #main-footer{
   position:fixed;
   bottom:0px;
   width:100%;
-  vertical-align: middle;
-  text-align: center;
-  border: 4mm ridge white;
+
+  border: 4px solid white;
+  background-color:#0a111f;
   box-sizing: border-box;
+
+  text-align: center;
+  font-family: Verdana;
+  font-size: 12px;
 }
 
 /* ========== CONTENT ========== */
-.box{
+#container-index{
   position:relative;
-  border-width:5px;
-  border-style:solid;
+  top: 40px;
+  width:80%;
+  margin:auto;
+  overflow:hidden;
+  display:flex;
+  flex-flow: row wrap;
+  justify-content:space-between;
+  align-items: center;
+}
+
+.box{
+  width:200px;
+  height:200px;
+  border:5px #ac8e4d solid;
+  border-radius: 5px;
   box-sizing: border-box;
   padding: 5px 40px;
-  margin: 20px 10%;
+  margin: 20px 20px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box h1{
   text-align:center;
 }
 
+.quote-of-the-day{
+  position: relative;
+  width:50%;
+  top: 50px;
+  border: 5px white double;
+  box-sizing: border-box;
+  margin: auto;
+
+  background-color: #0a111f80;
+
+  text-align: center;
+}
+
+/* ========== APPEARANCE ========== */
+.bird{
+  background-image:url("../images/yellow_bird-square-comp.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+.voicememo{
+  background-image:url("../images/microphone-square-comp.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+.beautiful-world{
+  background-image:url("../images/beautiful_world-square-comp.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+.Bram{
+  background-image:url("../images/Bram.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+}
+
+
+/* ========== LINKS ========== */
+a{
+  text-decoration: none;
+  color: white;
+}
+
+a:hover{
+  color:black;
+}
+
+a:active{
+  color:green;
+}
+
+a:visited{
+  color:white;
+}
+
+/* ========== CODE ========== */
+code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
+}
+
+/* ========== MEDIA ========== */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+}
+
+
+
+/* ========== NOT USED ==========*/
+.parrot-green{
+  border-color: #131c1f;
+  background-color: #131c1f80;
+}
+
+/* Rainbow */
+.red{
+  border-color:#ff0000;
+  background-color: #ff000080;
+}
+
+.orange{
+  border-color:#ff8000;
+  background-color: #ff800080;
+}
+
+.yellow{
+  border-color:#ffff00;
+  background-color: #ffff0080;
+}
+
+.chartreuse{
+  border-color:#80ff00;
+  background-color: #80ff0080;
+}
+
+/* Astronaut */
 .amethyst{
   border-color:#9E94AC;
   background-color: #9e94ac80;
@@ -63,31 +213,4 @@ body{
 .voodoo{
   border-color:#5E3B6A;
   background-color:#5E3B6A80;
-}
-
-
-/* ========== LINKS ========== */
-a{
-  text-decoration: none;
-  color:#000000;
-}
-
-a:hover{
-  color:red;
-}
-
-a:active{
-  color:green;
-}
-
-a:visited{
-  color:#000000;
-}
-
-/* ========== CODE ========== */
-code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
 }
